# nessie-npm-dependencies-plugin

./: LICENSE  README.md  pyproject.toml
src/nessie-npm-dependencies-plugin/: __init__.py  fetch.py
src/nessie_npm_dependencies_plugin/: __init__.py  plugin.py
